updated main body HTML

--- a/index.html
+++ b/index.html
@@ -10,35 +10,39 @@
     
     <header>
         <h1>Welcome to my Profile!</h1>
+        <h2>Grace Fernandez</h2>
+        <img src="" alt="Profile Picture"/>
     </header>
 
     <!-- Section 1: Bio -->
-    <section>
-        <h2>Hi, I'm Grace!</h2>
-        <img src="" alt="Profile Picture"/>
-        
-        <p> enter work experience bio text here</p>
+    <main>
+        <section>
+            <p> enter work experience bio text here</p>
 
-        <h2>Fun Facts</h2>
-        <ul>
-            <li>Been teaching myself to rollerskate for 3 years</li>
-            <li>I have a background in drawing and oil painting</li>
-            <li>If you can't find me, I'm likely hanging out in Discord and playing games :)</li>
-        </ul>
-    </section>
+            <h2>About Me</h2>
+            <ul>
+                <li>Been teaching myself to rollerskate for 3 years</li>
+                <li>I have a background in drawing and oil painting</li>
+                <li>If you can't find me, I'm likely hanging out in Discord and playing games :)</li>
+            </ul>
+        </section>
 
     <!-- Section 2: Contact Methods -->
-    <section>
-        <h2>Contact Methods</h2>
-        <ul>
-            <li>Email</li>
-            <li><a href="https://github.com/gracefern00">Github Profile</a></li>
-            <li>Website</li>
-        </ul>
-    </section>
+        <section>
+            <h2>Contact Methods</h2>
+            <ul>
+                <li>Email</li>
+                <li><a href="https://github.com/gracefern00">Github Profile</a></li>
+                <li>Website</li>
+            </ul>
+        </section>
     <!-- Section 3: Portfolio -->
 
-    <!-- Section 4: Meme Bank -->
+    </main>
+
+    <footer>
+
+    </footer>
 
 </body>
 </html>
