added comments for HTML and CSS styling

--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
     <title>Document</title>
 </head>
 
+<!-- MUST MAKE DOCUMENT FLEX AND RESPONSIVE TO DIFFERENT LAYOUTS -->
+
 <body>
-    
     <header>
         <h1>Welcome to my Profile!</h1>
         <h2>Grace Fernandez</h2>
         <img src="" alt="Profile Picture"/>
     </header>
 
-    <!-- Section 1: Bio -->
     <main>
         <section>
-            <p> enter work experience bio text here</p>
-
+            <!-- Links to other sections placed here -->
+            <!-- Add "about me" link -->
+            <!-- Add "work portfolio" link -->
+            <!-- Add "contact me" link -->
+        </section>
+       
+        <section>
             <h2>About Me</h2>
             <ul>
                 <li>Been teaching myself to rollerskate for 3 years</li>
@@ -27,7 +32,12 @@
             </ul>
         </section>
 
-    <!-- Section 2: Contact Methods -->
+        <section>
+            <!-- Insert work portfolio content -->
+            <!-- Need titled images -->
+            <!-- needs a deployed application with an image that links to the delpoyed URL application -->
+        </section>
+
         <section>
             <h2>Contact Methods</h2>
             <ul>
@@ -36,7 +46,6 @@
                 <li>Website</li>
             </ul>
         </section>
-    <!-- Section 3: Portfolio -->
 
     </main>
 
