fixed indentation issue

--- a/index.html
+++ b/index.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 
 <!-- MUST MAKE DOCUMENT FLEX AND RESPONSIVE TO DIFFERENT LAYOUTS -->
 
 <body>
-    <header>
-        <h1>Welcome to my Profile!</h1>
-        <h2>Grace Fernandez</h2>
-        <img src="" alt="Profile Picture"/>
-    </header>
+  <header>
+    <h1>Welcome to my Profile!</h1>
+    <h2>Grace Fernandez</h2>
+    <img src="" alt="Profile Picture"/>
+  </header>
 
-    <main>
-        <section>
+  <main>
+    <section>
             <!-- Links to other sections placed here -->
             <!-- Add "about me" link -->
             <!-- Add "work portfolio" link -->
             <!-- Add "contact me" link -->
-        </section>
+    </section>
        
-        <section>
-            <h2>About Me</h2>
-            <ul>
-                <li>Been teaching myself to rollerskate for 3 years</li>
-                <li>I have a background in drawing and oil painting</li>
-                <li>If you can't find me, I'm likely hanging out in Discord and playing games :)</li>
-            </ul>
-        </section>
+    <section>
+      <h2>About Me</h2>
+        <ul>
+        <li>Been teaching myself to rollerskate for 3 years</li>
+        <li>I have a background in drawing and oil painting</li>
+        <li>If you can't find me, I'm likely hanging out in Discord and playing games :)</li>
+        </ul>
+    </section>
 
-        <section>
+    <section>
             <!-- Insert work portfolio content -->
             <!-- Need titled images -->
             <!-- needs a deployed application with an image that links to the delpoyed URL application -->
-        </section>
+      <a href="insert depoloyed url" target="_blank">Application Image</a>
+   </section>
 
-        <section>
-            <h2>Contact Methods</h2>
-            <ul>
-                <li>Email</li>
-                <li><a href="https://github.com/gracefern00">Github Profile</a></li>
-                <li>Website</li>
-            </ul>
-        </section>
+    <section>
+      <h2>Contact Methods</h2>
+        <ul>
+        <li>Email</li>
+        <li><a href="https://github.com/gracefern00">Github Profile</a></li>
+        <li>Website</li>
+        </ul>
+    </section>
 
-    </main>
+  </main>
 
-    <footer>
+<footer>
 
-    </footer>
+</footer>
 
 </body>
 </html>
