reformatted base code and HTML sheet

--- a/index.html
+++ b/index.html
@@ -10,29 +10,22 @@
 
 <body>
   <header>
-    <h1>Welcome to my Profile!</h1>
-    <h2>Grace Fernandez</h2>
+    <h1>Grace Fernandez</h1>
+    <h4>About Me</h4>
+    <h4>Work</h4>
+    <h4>Contact Me</h4>
     <img src="" alt="Profile Picture"/>
   </header>
 
-  <main>
-    <section>
-            <!-- Links to other sections placed here -->
-            <!-- Add "about me" link -->
-            <!-- Add "work portfolio" link -->
-            <!-- Add "contact me" link -->
-    </section>
-       
+  <main>   
     <section>
       <h2>About Me</h2>
-        <ul>
-        <li>Been teaching myself to rollerskate for 3 years</li>
-        <li>I have a background in drawing and oil painting</li>
-        <li>If you can't find me, I'm likely hanging out in Discord and playing games :)</li>
-        </ul>
+        <p>Hello there! Thank you for taking a look at my profile. I am currently a full time employee with Cox Communications, while also studying Full Stack Web Development on the side. Please see below for some examples of my work!</p>
+        <p>Outside of work and class, I lead a rich and vibrant life online, and can frequently be found in discord chatting with friends or playing video games. My favorite genre is horror and I recently completed the entire Outlast franchise and am working through the Resident Evils. I also have a cat who I love very much, and also taught myself how to rollerskate. I would love to live and work overseas one day, and I'm hoping that learning to code will open up some new opportunities for me!</p>
     </section>
 
     <section>
+      <h2>Work</h2>
             <!-- Insert work portfolio content -->
             <!-- Need titled images -->
             <!-- needs a deployed application with an image that links to the delpoyed URL application -->
@@ -41,18 +34,11 @@
 
     <section>
       <h2>Contact Methods</h2>
-        <ul>
-        <li>Email</li>
-        <li><a href="https://github.com/gracefern00">Github Profile</a></li>
-        <li>Website</li>
-        </ul>
+        <h4>610-741-4427</h4>
+        <h4>gracefernandez00@icloud.com</h4>
+        <h4><a href="https://github.com/gracefern00">Github Profile</a></h4>
     </section>
-
   </main>
-
-<footer>
-
-</footer>
 
 </body>
 </html>
