--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Grace Fernandez Profile</title>
+  <link rel="stylesheet" type="text/css" href="Assets\style.css" />
 </head>
 
 <!-- MUST MAKE DOCUMENT FLEX AND RESPONSIVE TO DIFFERENT LAYOUTS -->
 
 <body>
-  <header>
+  <header class="header-text">
     <h1>Grace Fernandez</h1>
     <h4>About Me</h4>
     <h4>Work</h4>
@@ -19,13 +20,13 @@
 
   <main>   
     <section>
-      <h2>About Me</h2>
-        <p>Hello there! Thank you for taking a look at my profile. I am currently a full time employee with Cox Communications, while also studying Full Stack Web Development on the side. Please see below for some examples of my work!</p>
-        <p>Outside of work and class, I lead a rich and vibrant life online, and can frequently be found in discord chatting with friends or playing video games. My favorite genre is horror and I recently completed the entire Outlast franchise and am working through the Resident Evils. I also have a cat who I love very much, and also taught myself how to rollerskate. I would love to live and work overseas one day, and I'm hoping that learning to code will open up some new opportunities for me!</p>
+      <h2 class="section-headers">About Me</h2>
+        <p class="body-text">Hello there! Thank you for taking a look at my profile. I am currently a full time employee with Cox Communications, while also studying Full Stack Web Development on the side. Please see below for some examples of my work!</p>
+        <p class="body-text">Outside of work and class, I lead a rich and vibrant life online, and can frequently be found in discord chatting with friends or playing video games. My favorite genre is horror and I recently completed the entire Outlast franchise and am working through the Resident Evils. I also have a cat who I love very much, and also taught myself how to rollerskate. I would love to live and work overseas one day, and I'm hoping that learning to code will open up some new opportunities for me!</p>
     </section>
 
     <section>
-      <h2>Work</h2>
+      <h2 class="section-headers">Work</h2>
             <!-- Insert work portfolio content -->
             <!-- Need titled images -->
             <!-- needs a deployed application with an image that links to the delpoyed URL application -->
@@ -33,7 +34,7 @@
    </section>
 
     <section>
-      <h2>Contact Methods</h2>
+      <h2 class="section-headers">Contact Methods</h2>
         <h4>610-741-4427</h4>
         <h4>gracefernandez00@icloud.com</h4>
         <h4><a href="https://github.com/gracefern00">Github Profile</a></h4>
