formatted header and linked article id's

--- a/index.html
+++ b/index.html
@@ -10,34 +10,52 @@
 <!-- MUST MAKE DOCUMENT FLEX AND RESPONSIVE TO DIFFERENT LAYOUTS -->
 
 <body>
-  <header class="header-text">
+  <header class="header">
     <h1>Grace Fernandez</h1>
-    <h4>About Me</h4>
-    <h4>Work</h4>
-    <h4>Contact Me</h4>
-    <img src="" alt="Profile Picture"/>
+    <nav>
+      <ul>
+        <li>
+          <a href="#about-me">About Me</a>
+        </li>
+        <li>
+          <a href="#work">Work</a>
+        </li>
+        <li>
+          <a href="#contact-methods">Contact Methods</a>
+        </li>
+      </ul>
+    </nav>
   </header>
+    <section class="banner"></section>
+    
+    <img src="Assets\profile photo 1.jpg" alt="Profile Picture"/>
 
   <main>   
     <section>
-      <h2 class="section-headers">About Me</h2>
-        <p class="body-text">Hello there! Thank you for taking a look at my profile. I am currently a full time employee with Cox Communications, while also studying Full Stack Web Development on the side. Please see below for some examples of my work!</p>
-        <p class="body-text">Outside of work and class, I lead a rich and vibrant life online, and can frequently be found in discord chatting with friends or playing video games. My favorite genre is horror and I recently completed the entire Outlast franchise and am working through the Resident Evils. I also have a cat who I love very much, and also taught myself how to rollerskate. I would love to live and work overseas one day, and I'm hoping that learning to code will open up some new opportunities for me!</p>
+      <article id="about-me">
+        <h2 class="section-headers">About Me</h2>
+          <p class="body-text">Hello there! Thank you for taking a look at my profile. I am currently a full time employee with Cox Communications, while also studying Full Stack Web Development on the side. Please see below for some examples of my work!</p>
+          <p class="body-text">Outside of work and class, I lead a rich and vibrant life online, and can frequently be found in discord chatting with friends or playing video games. My favorite genre is horror and I recently completed the entire Outlast franchise and am working through the Resident Evils. I also have a cat who I love very much, and also taught myself how to rollerskate. I would love to live and work overseas one day, and I'm hoping that learning to code will open up some new opportunities for me!</p>
+      </article>
     </section>
 
     <section>
-      <h2 class="section-headers">Work</h2>
-            <!-- Insert work portfolio content -->
-            <!-- Need titled images -->
-            <!-- needs a deployed application with an image that links to the delpoyed URL application -->
-      <a href="insert depoloyed url" target="_blank">Application Image</a>
+      <article id="work">
+        <h2 class="section-headers">Work</h2>
+              <!-- Insert work portfolio content -->
+              <!-- Need titled images -->
+              <!-- needs a deployed application with an image that links to the delpoyed URL application -->
+        <a href="insert depoloyed url" target="_blank">Application Image</a>
+      </article>
    </section>
 
     <section>
-      <h2 class="section-headers">Contact Methods</h2>
-        <h4>610-741-4427</h4>
-        <h4>gracefernandez00@icloud.com</h4>
-        <h4><a href="https://github.com/gracefern00">Github Profile</a></h4>
+      <article id="contact-methods">
+        <h2 class="section-headers">Contact Methods</h2>
+          <h4>610-741-4427</h4>
+          <h4>gracefernandez00@icloud.com</h4>
+          <h4><a href="https://github.com/gracefern00">Github Profile</a></h4>
+      </article>
     </section>
   </main>
 
