finalized updates to CSS header

--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
     <section>
       <article id="contact-methods">
         <h2 class="section-headers">Contact Methods</h2>
-          <h4>610-741-4427</h4>
-          <h4>gracefernandez00@icloud.com</h4>
-          <h4><a href="https://github.com/gracefern00">Github Profile</a></h4>
+          <ul>
+            <li>610-741-4427</li>
+            <li>gracefernandez00@icloud.com</li>
+            <li><a href="https://github.com/gracefern00">Github Profile</a></li>
+          </ul>
       </article>
     </section>
   </main>
