added classes in CSS and readded banner photo

--- a/index.html
+++ b/index.html
@@ -26,21 +26,23 @@
       </ul>
     </nav>
   </header>
-    <section class="banner"></section>
-    
 
-  <main>   
-    <section>
+  <main>
+    <section class="banner">
+      <img src="Assets\Cyberpunk Bar.png" alt="Cyberpunk Bar">
+    </section>  
+   
+    <section class="about-me">
       <article id="about-me">
-        <h2 class="section-headers">About Me</h2>
+        <h2>About Me</h2>
           <p class="body-text">Hello there! Thank you for taking a look at my profile. I am currently a full time employee with Cox Communications, while also studying Full Stack Web Development on the side. Please see below for some examples of my work!</p>
           <p class="body-text">Outside of work and class, I lead a rich and vibrant life online, and can frequently be found in discord chatting with friends or playing video games. My favorite genre is horror and I recently completed the entire Outlast franchise and am working through the Resident Evils. I also have a cat who I love very much, and also taught myself how to rollerskate. I would love to live and work overseas one day, and I'm hoping that learning to code will open up some new opportunities for me!</p>
       </article>
     </section>
 
-    <section>
+    <section class="work">
       <article id="work">
-        <h2 class="section-headers">Work</h2>
+        <h2>Work</h2>
               <!-- Insert work portfolio content -->
               <!-- Need titled images -->
               <!-- needs a deployed application with an image that links to the delpoyed URL application -->
@@ -48,14 +50,16 @@
       </article>
    </section>
 
-    <section>
+    <section class="contact-methods">
       <article id="contact-methods">
-        <h2 class="section-headers">Contact Methods</h2>
+        <h2>Contact Methods</h2>
+        <nav>
           <ul>
             <li>610-741-4427</li>
             <li>gracefernandez00@icloud.com</li>
             <li><a href="https://github.com/gracefern00">Github Profile</a></li>
           </ul>
+        </nav>   
       </article>
     </section>
   </main>
