fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <!-- Insert work portfolio content -->
               <!-- Need titled images -->
               <!-- needs a deployed application with an image that links to the delpoyed URL application -->
-        <a href="insert depoloyed url" target="_blank">Application Image</a>
+        <a href="insert deployed url" target="_blank">Application Image</a>
       </article>
    </section>
 
