added styling for photos and added placeholder photos

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
   </header>
 
   <main>
-    <section class="banner">
+    <section>
       <img src="Assets\Cyberpunk Bar.png" alt="Cyberpunk Bar">
     </section>  
    
     <section class="about-me">
-      <article id="about-me">
+      <article id="about-me" class="about-me-format">
+        <img src="Assets\profile photo 1.jpg" class="profile-photo">
         <h2>About Me</h2>
           <p class="body-text">Hello there! Thank you for taking a look at my profile. I am currently a full time employee with Cox Communications, while also studying Full Stack Web Development on the side. Please see below for some examples of my work!</p>
           <p class="body-text">Outside of work and class, I lead a rich and vibrant life online, and can frequently be found in discord chatting with friends or playing video games. My favorite genre is horror and I recently completed the entire Outlast franchise and am working through the Resident Evils. I also have a cat who I love very much, and also taught myself how to rollerskate. I would love to live and work overseas one day, and I'm hoping that learning to code will open up some new opportunities for me!</p>
@@ -41,17 +42,18 @@
     </section>
 
     <section class="work">
-      <article id="work">
+      <article id="work" class="work-format">
         <h2>Work</h2>
-              <!-- Insert work portfolio content -->
-              <!-- Need titled images -->
-              <!-- needs a deployed application with an image that links to the delpoyed URL application -->
-        <a href="insert deployed url" target="_blank">Application Image</a>
+          <img src="Assets\IMG_8227.jpg" class="placeholder-photo">
+          <img src="Assets\IMG_8244.jpg" class="placeholder-photo">
+          <img src="Assets\IMG_8380.jpg" class="placeholder-photo">
+          <img src="Assets\IMG_8384.jpg" class="placeholder-photo">
+          <img src="Assets\IMG_8389.jpg" class="placeholder-photo">
       </article>
    </section>
 
     <section class="contact-methods">
-      <article id="contact-methods">
+      <article id="contact-methods" class="contact-me-format">
         <h2>Contact Methods</h2>
         <nav>
           <ul>
