added flexbox styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,10 @@
   <link rel="stylesheet" type="text/css" href="Assets\style.css" />
 </head>
 
-<!-- MUST MAKE DOCUMENT FLEX AND RESPONSIVE TO DIFFERENT LAYOUTS -->
+<!-- MUST MAKE DOCUMENT FLEX AND RESPONSIVE TO DIFFERENT LAYOUTS SUCH AS MOBILE FORMATS -->
+
+<!-- Header has ordered lists that are arranged horizontally -->
+<!-- About Me, Work, and Contact Methods link to appropriate article -->
 
 <body>
   <header class="header">
@@ -27,44 +31,69 @@
     </nav>
   </header>
 
+  <!-- Banner image appropriately resizes according to the browser flexing -->
+  <!-- Alt Text added -->
   <main>
     <section>
-      <img src="Assets\Cyberpunk Bar.png" alt="Cyberpunk Bar">
-    </section>  
-   
-    <section class="about-me">
-      <article id="about-me" class="about-me-format">
-        <img src="Assets\profile photo 1.jpg" class="profile-photo">
+      <img src="Assets\Cyberpunk Bar.png" alt="Cyberpunk Bar" class="banner">
+    </section>
+
+    <!-- About Me section is wrapped in divs that link to stylesheet -->
+
+    <article id="about-me" class="about-me-format">
+      <div>
         <h2>About Me</h2>
-          <p class="body-text">Hello there! Thank you for taking a look at my profile. I am currently a full time employee with Cox Communications, while also studying Full Stack Web Development on the side. Please see below for some examples of my work!</p>
-          <p class="body-text">Outside of work and class, I lead a rich and vibrant life online, and can frequently be found in discord chatting with friends or playing video games. My favorite genre is horror and I recently completed the entire Outlast franchise and am working through the Resident Evils. I also have a cat who I love very much, and also taught myself how to rollerskate. I would love to live and work overseas one day, and I'm hoping that learning to code will open up some new opportunities for me!</p>
-      </article>
-    </section>
+        <img src="Assets\profile photo 1.jpg" class="profile-photo">
+      </div>
+      <div>
+        <p class="body-text">Hello there! Thank you for taking a look at my profile. I am currently a full time
+          employee with Cox Communications, while also studying Full Stack Web Development on the side. Please see
+          below for some examples of my work!</p>
+        <p class="body-text">Outside of work and class, I lead a rich and vibrant life online, and can frequently be
+          found in discord chatting with friends or playing video games. My favorite genre is horror and I recently
+          completed the entire Outlast franchise and am working through the Resident Evils. I also have a cat who I
+          love very much, and also taught myself how to rollerskate. I would love to live and work overseas one day,
+          and I'm hoping that learning to code will open up some new opportunities for me!</p>
+      </div>
+    </article>
 
-    <section class="work">
-      <article id="work" class="work-format">
+
+    <!-- Work section is wrapped in divs that link to stylesheet -->
+    <!-- Need images to link to some type of URL (meme bank until appropriate work is added?) -->
+
+    <article id="work" class="work-format">
+      <div>
+        <div></div>
         <h2>Work</h2>
-          <img src="Assets\IMG_8227.jpg" class="placeholder-photo">
-          <img src="Assets\IMG_8244.jpg" class="placeholder-photo">
-          <img src="Assets\IMG_8380.jpg" class="placeholder-photo">
-          <img src="Assets\IMG_8384.jpg" class="placeholder-photo">
-          <img src="Assets\IMG_8389.jpg" class="placeholder-photo">
-      </article>
-   </section>
+      </div>
+      <div>
+        <img src="Assets\IMG_8227.jpg" alt="Placeholder" class="placeholder-photo">
+        <img src="Assets\IMG_8244.jpg" alt="Placeholder" class="placeholder-photo">
+        <img src="Assets\IMG_8380.jpg" alt="Placeholder" class="placeholder-photo">
+        <img src="Assets\IMG_8384.jpg" alt="Placeholder" class="placeholder-photo">
+        <img src="Assets\IMG_8389.jpg" alt="Placeholder" class="placeholder-photo">
+      </div>
+      </div>
+    </article>
 
-    <section class="contact-methods">
-      <article id="contact-methods" class="contact-me-format">
-        <h2>Contact Methods</h2>
-        <nav>
-          <ul>
-            <li>610-741-4427</li>
-            <li>gracefernandez00@icloud.com</li>
-            <li><a href="https://github.com/gracefern00">Github Profile</a></li>
-          </ul>
-        </nav>   
-      </article>
-    </section>
+
+    <!-- Contact Methods section is wrapped in divs that link to stylesheet -->
+
+    <article id="contact-methods" class="contact-me-format">
+      <h2>Contact Methods</h2>
+      <div>
+        <p>610-741-4427</p>
+      </div>
+      <div>
+        <p>gracefernandez00@icloud.com</p>
+      </div>
+      <div>
+        <p><a href="https://github.com/gracefern00">Github Profile</a></p>
+      </div>
+    </article>
+
   </main>
 
 </body>
+
 </html>
