added readme text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <!-- Header has ordered lists that are arranged horizontally -->
 <!-- About Me, Work, and Contact Methods link to appropriate article -->
-
+<!-- Need to update the links to be buttons that change color and opacity when clicked -->
+<!-- Would like name at top of profile to be more stylized -->
 <body>
   <header class="header">
     <h1>Grace Fernandez</h1>
@@ -60,6 +61,7 @@
 
     <!-- Work section is wrapped in divs that link to stylesheet -->
     <!-- Need images to link to some type of URL (meme bank until appropriate work is added?) -->
+    <!-- Need to add shadows and opacity changes when hovering/clicking -->
 
     <article id="work" class="work-format">
       <div>
